--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
 </head>
 <body>
     <header>
-        <img id="immaginesfondo" src="img/pattern.png">
+        <!--immagini e logo-->
+        <div id="immagine-sfondo" src="img/pattern.png">
         <img  id="logo" src="img/logo.svg">
-    </header>
+    </div>
+    <!--fine immagini e logo-->
+</header>
+
+<main>
+    <section>
+        <div class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee.</div>
+        <div class="info">Scritto da <span id="autore">The Booleaners</span></div>
+        <div class="info">il 10/10/2020</div>
+    </section>
+
+    <section>
+        <img class="immagini-tim" src="img/tim-1.jpg">
+        <img class="immagini-tim" src="img/tim-2.jpg">
+    </section>
+</main>
+
+
+    
     
 </body>
 </html>
