--- a/index.html
+++ b/index.html
@@ -27,6 +27,52 @@
         <img class="immagini-tim" src="img/tim-1.jpg">
         <img class="immagini-tim" src="img/tim-2.jpg">
     </section>
+    <!--descizione immagini-->
+    <small>1St photo: John S and James knight Foundation, by Scott Heinrichsen</small><br>
+    <small>2nd Photo: Wikipedia by Paul Clarke</small>
+
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <mark>Eius ipsa quos ipsam eveniet, magni explicabo dicta</mark> quod earum tenetur ab at perferendis nemo minim. Ipsam nemo excepturi fugiat totam. Debitis?</p>
+    </section>
+
+    <section>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus totam veniam possimus architecto repellat ea consectetur atque minima exercitationem laboriosam vero eum quaerat deserunt, asperiores aspernatur iusto quidem, rem ullam!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta culpa necessitatibus, illo quaerat veritatis itaque ratione! Perspiciatis et non quidem soluta culpa rem pariatur possimus illum animi? Numquam, reprehenderit. Unde.</li>
+            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, aliquam consequatur? Facere architecto molestias repudiandae velit optio voluptate ipsum! Provident sapiente iste odio aliquam veritatis praesentium libero voluptatum repudiandae incidunt.</li>
+        </ul>
+    </section>
+
+    <section>
+        <!-- inizio tabella-->
+        <table>
+            <thead> 
+                <tr>
+                    <th>lorem ipsum</th>
+                    <th>lorem ipsum</th>
+                    <th>lorem ipsum</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr class="linea-blu">
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore repellendus ut ipsa eos labore? Ipsum perspiciatis, eos odit, est accusamus praesentium sit sequi reiciendis earum enim vero. Aperiam, labore esse!</th>
+
+                    <tr>
+                        <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore repellendus ut ipsa eos labore? Ipsum perspiciatis, eos odit, est accusamus praesentium sit sequi reiciendis earum enim vero. Aperiam, labore esse!</th>
+                    </tr>
+
+                    <tr class="linea-blu">
+                        <th>lorem ipsum dolor</th>
+                        <th>lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore repellendus ut ipsa eos labore? Ipsum perspiciatis, eos odit, est accusamus praesentium sit sequi reiciendis earum enim vero. Aperiam, labore esse!</th>
+            </tbody>
+        </table>
+    </section>
 </main>
 
 
