--- a/index.html
+++ b/index.html
@@ -72,11 +72,17 @@
                         <th>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore repellendus ut ipsa eos labore? Ipsum perspiciatis, eos odit, est accusamus praesentium sit sequi reiciendis earum enim vero. Aperiam, labore esse!</th>
             </tbody>
         </table>
+        <!--fine tabella-->
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus architecto voluptas deserunt minima cumque earum exercitationem quas perspiciatis sunt rerum, <mark>mollitia nobis veniam cupiditate officia placeat, doloremque quos alias dolor</mark>.</p>
     </section>
 </main>
 
+<footer>
+    <h5>Potrebbero interessarti</h3>
+        <div class="loremuno">Lorem ipsum dolor</div>
+<div class="loremdue">Lorem ipsum dolor</div>
+</footer>
 
-    
-    
 </body>
 </html>
