--- a/index.html
+++ b/index.html
@@ -79,9 +79,15 @@
 </main>
 
 <footer>
-    <h5>Potrebbero interessarti</h3>
-        <div class="loremuno">Lorem ipsum dolor</div>
-<div class="loremdue">Lorem ipsum dolor</div>
+    <h5>Potrebbero interessarti</h5>
+        <div class="immagineuno">
+            <img src="img/monitor.jpg"/>
+            <h6>lorem ipsum dolor</h6>
+            <div class="immagineuno">
+                <img src="img/graph.jpg"/>
+                <h6>lorem ipsum dolor</h6>
+                
+
 </footer>
 
 </body>
